[project]
name = "clovers-groupmate-waifu"
version = "0.3.0"
description = ""
authors = [{ name = "KarisAya", email = "karisaya@foxmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "pydantic (>=2.13.0,<3.0.0)",
    "linecard (>=0.2.0,<0.3.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "clovers (>=0.5.1,<0.6.0)",
    "clovers-apscheduler (>=0.3,<0.4)",
    "clovers-client (>=0.3.2,<0.4)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
